--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Advanced Scientific Visualization 
-description: My webpage
+description: Rituja Patil's webpage
 show_downloads: True
 navigation:
   - title: Home
